--- a/index.html
+++ b/index.html
@@ -9,6 +9,32 @@
     <body>
         <h1 class='bigtext'>Discover hidden places in the world around you</h1>
         <h5 class='link'><a href="https://www.wikipedia.org/">Download Excursion (Coming soon!)</a></h5>
+
+        <div class="video">
+        <video width="960" height="720" autoplay="autoplay" muted>
+            <source src="excursion.mp4" type="video/mp4">
+            Video not supported
+        </video>
+        </div>
+
+        <h1 class='bigtext'>Your personal travel guide</h1>
+
+        <h3 class='grey'>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+
+        <div class="video">
+            <img src="camp.png"/>
+        </div>
+        </br> 
+        <div class="video">
+            <img src="phone.png"/>
+        </div>
+
+        <h1 class='bigtext'>Coming Soon for iPhone and Android</h1>
+        <h5 class='link'><a href="https://www.wikipedia.org/">Download Excursion (Coming soon!)</a></h5>
+
+        <h2>
+            © excrusion 
+        </h2>
     </body>
 
     <footer>
